syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles";

message Ping {
    string ID = 1;
}

message HealthResponse {
    bool received = 1;
}
